# cleanax

./: Cargo.toml  README.md  test.sh
src/: lib.rs
tests/: test_cleanax.py  test_opencv.py
