[package]
name = "cleanax"
version = "0.1.0"
authors = ["vinhig <vincent.higginson@student.unamur.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cleanax"
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[dependencies]
rayon = "1.5"
indicatif = "0.16.0"
image = "0.23.14"
num-traits = "0.2"
pyo3 = {version = "0.13.2", features = ["extension-module"]}